--- a/web/tinymap.css
+++ b/web/tinymap.css
@@ -1,3 +1,5 @@
+* { font-family: 'Open Sans', sans-serif, Helvetica; }
+
 body {
     padding: 0;
     margin: 0;
@@ -7,6 +9,67 @@ html, body, #map {
 }
 
 
+.header {
+  display: flex;
+
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  border-bottom: 1px solid gray;
+}
+
+.logo-img {
+  padding: 10px 10px 10px 20px;
+}
+
+.kk {
+  align-content: center;
+  padding: 18px 30px 10px 5px;
+}
+
+
+.logo-text {
+  flex-grow: 2;
+  font-size: 36px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+
+a {
+  text-decoration: none !important;
+  color: #10678B;
+}
+
+a:hover {
+  color: #F76F56 !important;
+}
+
+.download {
+  position: relative;
+}
+
+.download-comment {
+  position: absolute;
+  top: 38px;
+  right: 30px;
+  opacity: 0.4;
+  font-size: 12px;
+}
+
+.logo-img img  {
+  width: 40px;
+  height: 40px;
+}
+
+.about,
+.download {
+  align-content: flex-end;
+}
+
+.maps {
+  margin-bottom: 20px;
+}
 
 
 #identifyFeatureName {
