--- a/android.tree_mapper/app/src/main/res/values/colors.xml
+++ b/android.tree_mapper/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="primary">#8FE8FF</color>
     <color name="primary_dark">#0277bd</color>
     <color name="accent">#01c9ff</color>
+    <color name="bt_text_color">#ffffff</color>
 </resources>
