--- a/android.tree_mapper/app/src/main/res/layout/activity_main.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nextgis.woody.activity.MainActivity">
+    android:orientation="vertical"
+    tools:context=".activity.MainActivity">
 
     <include
         layout="@layout/actionbar"/>
 
+    <FrameLayout
+        android:id="@+id/map_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_map"/>
 
-</RelativeLayout>
+
+</LinearLayout>
