--- a/android.tree_mapper/app/src/main/res/layout/activity_main.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,11 +11,29 @@
     <include
         layout="@layout/actionbar"/>
 
-    <FrameLayout
-        android:id="@+id/map_frame"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_map"/>
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:id="@+id/map_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_map"/>
 
+        <com.getbase.floatingactionbutton.AddFloatingActionButton
+            android:id="@+id/add_tree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            fab:fab_colorNormal="?attr/colorAccent"
+            fab:fab_colorPressed="?attr/colorPrimaryDark"
+            fab:fab_plusIconColor="@android:color/white"
+            />
+
+    </RelativeLayout>
 
 </LinearLayout>
