--- a/android.tree_mapper/app/src/main/res/values/colors.xml
+++ b/android.tree_mapper/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="actionBarColor">#01c9ff</color>
-    <color name="primary">#8FE8FF</color>
+    <color name="primary">#dbf7ff</color>
     <color name="primary_dark">#0277bd</color>
     <color name="accent">#01c9ff</color>
     <color name="bt_text_color">#ffffff</color>
