--- a/android.tree_mapper/app/src/main/res/layout/activity_main.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="2">
         <FrameLayout
             android:id="@+id/map_frame"
             android:layout_width="match_parent"
@@ -55,5 +56,12 @@
             />
 
     </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/tree_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_tree_details"
+        android:layout_weight="1"/>
 
 </LinearLayout>
