--- a/android.tree_mapper/app/src/main/res/layout/activity_main_first.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_main_first.xml
@@ -2,8 +2,9 @@
   ~ * Project:  Woody
   ~ * Purpose:  Mobile application for trees mapping.
   ~ * Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
+  ~ * Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ * *****************************************************************************
-  ~ * Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ * Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~ *
   ~ * This program is free software: you can redistribute it and/or modify
   ~ * it under the terms of the GNU General Public License as published by
@@ -29,9 +30,26 @@
     <include
         layout="@layout/actionbar"/>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/login_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_login"/>
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="@string/message_need_permissions"/>
+
+        <Button
+            android:id="@+id/permissioons"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/action_settings"/>
+    </LinearLayout>
 </LinearLayout>
