--- a/android.tree_mapper/app/src/main/res/layout/fragment_login.xml
+++ b/android.tree_mapper/app/src/main/res/layout/fragment_login.xml
@@ -77,12 +77,30 @@
             android:layout_height="wrap_content"
             android:gravity="center">
 
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/fb_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:soundEffectsEnabled="false"
+                android:visibility="gone"/>
+
+            <ImageButton
+                android:id="@+id/fb"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:background="@null"
+                android:scaleType="fitXY"
+                android:src="@drawable/fb"
+                tools:ignore="ContentDescription"/>
+
             <ImageButton
                 android:id="@+id/vk"
-                android:layout_margin="16dp"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:layout_gravity="center"
+                android:layout_margin="16dp"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/vk"
