--- a/android.tree_mapper/app/src/main/res/layout/activity_main.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,9 @@
   ~ * Project:  Woody
   ~ * Purpose:  Mobile application for trees mapping.
   ~ * Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
+  ~ * Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ * *****************************************************************************
-  ~ * Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ * Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~ *
   ~ * This program is free software: you can redistribute it and/or modify
   ~ * it under the terms of the GNU General Public License as published by
@@ -19,22 +20,23 @@
   ~ * You should have received a copy of the GNU General Public License
   ~ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.MainActivity">
+<LinearLayout android:id="@+id/activity_main"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:fab="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".activity.MainActivity">
 
     <include
         layout="@layout/actionbar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <FrameLayout
             android:id="@+id/map_frame"
             android:layout_width="match_parent"
@@ -52,16 +54,13 @@
             android:layout_marginRight="5dp"
             fab:fab_colorNormal="?attr/colorAccent"
             fab:fab_colorPressed="?attr/colorPrimaryDark"
-            fab:fab_plusIconColor="@android:color/white"
-            />
-
+            fab:fab_plusIconColor="@android:color/white"/>
     </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/tree_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_tree_details"
-        android:layout_weight="1"/>
-
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        tools:layout="@layout/fragment_tree_details"/>
 </LinearLayout>
