--- a/android.tree_mapper/app/src/main/res/layout/fragment_tree_details.xml
+++ b/android.tree_mapper/app/src/main/res/layout/fragment_tree_details.xml
@@ -3,8 +3,9 @@
   ~ * Project:  Woody
   ~ * Purpose:  Mobile application for trees mapping.
   ~ * Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
+  ~ * Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ * *****************************************************************************
-  ~ * Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ * Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~ *
   ~ * This program is free software: you can redistribute it and/or modify
   ~ * it under the terms of the GNU General Public License as published by
@@ -21,101 +22,112 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:easypicker="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         android:orientation="vertical"
-        android:layout_margin="22dp">
+        android:padding="22dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:text="TextView"
+                android:id="@+id/species"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/species"
                 android:layout_weight="2"
+                android:gravity="center_vertical"
+                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textStyle="normal|bold"
-                android:gravity="center_vertical" />
+                android:textStyle="normal|bold"/>
 
             <ImageView
-                app:srcCompat="@drawable/ic_action_delete_light"
                 android:id="@+id/delete_action"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_width="100dp" />
-
-            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_action_edit_dark"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_action_delete_light"/>
+
+            <ImageView
                 android:id="@+id/edit_action"
-                android:layout_weight="1"
-                android:layout_marginStart="2dp"
-                android:layout_marginLeft="2dp" />
-
-            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_action_cancel_light"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_action_edit_dark"/>
+
+            <ImageView
                 android:id="@+id/close_action"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
-                android:layout_marginStart="2dp"
-                android:layout_marginLeft="2dp"/>
+                app:srcCompat="@drawable/ic_action_cancel_light"/>
 
         </LinearLayout>
 
         <TextView
-            android:text="TextView"
+            android:id="@+id/coordinates"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/coordinates"
+            android:layout_marginBottom="17dp"
             android:layout_weight="1"
-            android:textColor="@color/textColorSecondary.Light"
-            android:layout_marginBottom="17dp" />
+            android:text="TextView"
+            android:textColor="@color/textColorSecondary.Light"/>
+
         <!-- Photo -->
-        <FrameLayout
+        <com.nextgis.maplibui.control.PhotoGallery
             android:id="@+id/photo_gallery"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            easypicker:noControls="true"
+            easypicker:oneLineGallery="true"/>
+
         <!-- State -->
         <View
+            android:id="@+id/first_divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/color_black"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:text="@string/state"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:text="@string/state"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
+
             <TextView
-                android:text="TextView"
+                android:id="@+id/state"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/state"
                 android:layout_weight="2"
+                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
         </LinearLayout>
@@ -124,26 +136,28 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/color_black"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:text="@string/girth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:text="@string/girth"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
+
             <TextView
-                android:text="TextView"
+                android:id="@+id/girth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/girth"
                 android:layout_weight="2"
+                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
         </LinearLayout>
@@ -152,26 +166,28 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/color_black"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:text="@string/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:text="@string/age"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
+
             <TextView
-                android:text="TextView"
+                android:id="@+id/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/age"
                 android:layout_weight="2"
+                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
         </LinearLayout>
@@ -180,26 +196,28 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/color_black"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:text="@string/height"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:text="@string/height"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
+
             <TextView
-                android:text="TextView"
+                android:id="@+id/height"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/height"
                 android:layout_weight="2"
+                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />
         </LinearLayout>
