--- a/android.tree_mapper/app/src/main/res/layout/fragment_empty.xml
+++ b/android.tree_mapper/app/src/main/res/layout/fragment_empty.xml
@@ -3,8 +3,9 @@
   ~ * Project:  Woody
   ~ * Purpose:  Mobile application for trees mapping.
   ~ * Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
+  ~ * Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ * *****************************************************************************
-  ~ * Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ * Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~ *
   ~ * This program is free software: you can redistribute it and/or modify
   ~ * it under the terms of the GNU General Public License as published by
@@ -21,9 +22,27 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="22dp"
-    android:id="@+id/photo_holder">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/photo_holder"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="22dp"
+        android:layout_weight="1"
+        android:orientation="vertical"/>
+
+    <Button
+        android:id="@+id/experts"
+        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/ic_plus"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_plus"
+        android:drawableTint="@color/vk_black"
+        android:text="@string/params_for_experts"/>
 </LinearLayout>
