--- a/android.tree_mapper/app/src/main/res/layout/fragment_tree_details.xml
+++ b/android.tree_mapper/app/src/main/res/layout/fragment_tree_details.xml
@@ -46,7 +46,7 @@
             <TextView
                 android:id="@+id/species"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center_vertical"
                 android:text="TextView"
