--- a/android.tree_mapper/app/src/main/res/layout/activity_expert.xml
+++ b/android.tree_mapper/app/src/main/res/layout/activity_expert.xml
@@ -162,7 +162,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/injury"
                     android:imeOptions="actionDone"
-                    android:inputType="numberDecimal"
+                    android:inputType="text"
                     android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
