--- a/android.tree_mapper/app/src/main/res/menu/main.xml
+++ b/android.tree_mapper/app/src/main/res/menu/main.xml
@@ -25,6 +25,13 @@
       tools:context=".MainActivity">
 
     <item
+        android:id="@+id/action_sync"
+        android:icon="@drawable/ic_sync_black_24dp"
+        android:orderInCategory="50"
+        android:title="@string/sync"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/action_about"
